; ModuleID = '/home/carl/AnghaBench/netdata/web/api/queries/sum/extr_sum.c_grouping_flush_sum.c'
source_filename = "/home/carl/AnghaBench/netdata/web/api/queries/sum/extr_sum.c_grouping_flush_sum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }
%struct.grouping_sum = type { double, i64 }

@RRDR_VALUE_EMPTY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @grouping_flush_sum(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.grouping_sum*, align 8
  %6 = alloca double, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to %struct.grouping_sum*
  store %struct.grouping_sum* %11, %struct.grouping_sum** %5, align 8
  %12 = load %struct.grouping_sum*, %struct.grouping_sum** %5, align 8
  %13 = getelementptr inbounds %struct.grouping_sum, %struct.grouping_sum* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  %16 = xor i1 %15, true
  %17 = zext i1 %16 to i32
  %18 = call i64 @unlikely(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %2
  store double 0.000000e+00, double* %6, align 8
  %21 = load i32, i32* @RRDR_VALUE_EMPTY, align 4
  %22 = load i32*, i32** %4, align 8
  %23 = load i32, i32* %22, align 4
  %24 = or i32 %23, %21
  store i32 %24, i32* %22, align 4
  br label %29

25:                                               ; preds = %2
  %26 = load %struct.grouping_sum*, %struct.grouping_sum** %5, align 8
  %27 = getelementptr inbounds %struct.grouping_sum, %struct.grouping_sum* %26, i32 0, i32 0
  %28 = load double, double* %27, align 8
  store double %28, double* %6, align 8
  br label %29

29:                                               ; preds = %25, %20
  %30 = load %struct.grouping_sum*, %struct.grouping_sum** %5, align 8
  %31 = getelementptr inbounds %struct.grouping_sum, %struct.grouping_sum* %30, i32 0, i32 0
  store double 0.000000e+00, double* %31, align 8
  %32 = load %struct.grouping_sum*, %struct.grouping_sum** %5, align 8
  %33 = getelementptr inbounds %struct.grouping_sum, %struct.grouping_sum* %32, i32 0, i32 1
  store i64 0, i64* %33, align 8
  %34 = load double, double* %6, align 8
  ret double %34
}

declare dso_local i64 @unlikely(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
